[project]
name = "textual_bank"
version = "0.1.0"
description = ""
authors = [{ name = "Adam K.", email = "arkelly2@medicine.wisc.edu" }]
dependencies = [
    "textual>=0.41.0",
    "textual-dev>=1.2.1",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
]
requires-python = ">=3.10, <3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["textual-dev>=1.2.1"]
